--- a/src/board.scss
+++ b/src/board.scss
@@ -19,7 +19,7 @@ input[type="number"] {
 
 .board-screen {
   perspective: 1000px;
-  scale: 0.8;
+  transform: scale(0.8);
   transition: all 300ms ease-in-out;
   text-align: center;
 
@@ -274,7 +274,7 @@ button {
         padding: 0;
       }
       .dice {
-        scale: 0.4;
+        transform: scale(0.4);
         margin: -0.65rem;
       }
     }
@@ -287,7 +287,7 @@ button {
         padding: 0;
         margin: auto;
         .dice {
-          scale: 0.6;
+          transform: scale(0.6);
           margin: 0;
           // width: 2rem;
           // height: 2rem;
