--- a/src/marketplace/marketplace.scss
+++ b/src/marketplace/marketplace.scss
@@ -88,7 +88,7 @@
 .itemContainer button {
   font-family: Glory;
   font-family: 400;
-
+  cursor: pointer;
   padding: 0.2rem 1rem;
   margin: 2rem auto 1rem auto;
 }
