--- a/src/board.scss
+++ b/src/board.scss
@@ -18,8 +18,11 @@ input[type="number"] {
 }
 
 .board-screen {
+  position: absolute;
+  top: 50%;
+  left: 50%;
   perspective: 1000px;
-  transform: scale(0.8);
+  transform: translate(-50%, -50%) scale(0.64);
   transition: all 300ms ease-in-out;
   text-align: center;
 
