--- a/src/marketplace/marketplace.scss
+++ b/src/marketplace/marketplace.scss
@@ -1,3 +1,7 @@
+#market {
+  padding: 6rem 0;
+}
+
 .marketplace-header {
   height: 60px;
   // background: -webkit-linear-gradient(25deg, #c9864f 0%, #f5c89e 100%);
